OpenAI SDK updated